Added hex/rgb value entry to choose colours.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/hex-function.css">
     <link rel="icon" type="image/x-icon" href="assets/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
 </head>
@@ -37,7 +38,9 @@
             </div>
             <div class="editor-el">
                 <div class="edit-color-text">Edit Color</div>
-                <div id="picker"></div>
+                <div id="picker">
+                
+                </div>
             </div>
             <div class="js-current-palette" id="current-palette"></div>
         </div>
@@ -49,7 +52,7 @@
 
 
 
-    <script type="module" src="index.js"></script>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 
 </html>
