Colour hexcode now automatically copies to clipboard when clicked (for palettes in your collection)

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 
 <body>
     <div class="header-el">
-        <!-- <button class="new-palette-button js-new-palette-button">+</button> -->
         <label class="switch">
             <input type="checkbox">
             <span class="slider"></span>
         </label>
-        <!-- <img id="clipboardIcon" src="assets/copy.png"> -->
+        <div id="clipboardMessage">copied to clipboard &#10003</div>
         <img src="assets/logo-full.png">
     </div>
 
