--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/hex-function.css">
     <link rel="icon" type="image/x-icon" href="assets/logo.png">
-    <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script> -->
 </head>
 
 <body>
@@ -47,10 +47,13 @@
             <span class="inner-text">- click a color to copy to clipboard</span>
         </div>
         <div id="palette-collection"></div>
+        <div id="footer">
+            <a href="https://github.com/bliu217/palette" target="_blank">GitHub</a>
+        </div>
     </div>
 
 
-
+    <script src="scripts/iro.js"></script>
     <script type="module" src="scripts/index.js"></script>
 </body>
 
