--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img src="assets/dropper.png">
                 </div>
                 <div class="dm-tool" id="change-function-button">
-                    <img src="assets/hashtag.png">
+                    <img id="dm-func" src="assets/hashtag.png">
                 </div>
                 <div class="dm-tool" id="add-button">
                     <img src="assets/add.png">
